# website

./: .gitattributes  .gitignore  Caddyfile  Cargo.toml  Dockerfile  Meta.toml  README.md  compose.yml  docker-bake.hcl
.github/workflows/: build.yml
blog-pages/: building_this_site.md  dusk_wants.md  frame_of_mind.md  frame_of_mind_2.md  rust_ranges_and_suffering.md  text_editors.md
content/blog-pages/: building_this_site.md
content/pages/: about.md
content/static/: ooer.css  style.css
content/static/mason/: index.html
content/templates/: base.html.tera  post-list.html.tera
decktracker/: index.html  package.json  tsconfig.json  vite.config.js
decktracker/src/: card-info.tsx  deck-info.tsx  main.tsx  style.css  timeline.tsx
decktracker/src/components/: app.tsx  deck.tsx  slot.tsx
pages/: about.md  home.md
src/: main.rs  page.rs  routes.rs
static/: style.css
static/mason/: style.css
syntaxes/: RustEnhanced.sublime-syntax  license.txt
templates/: base.html.tera  error.html.tera  macros.html.tera  page.html.tera  post-list.html.tera  post.html.tera
website/: .dockerignore  Cargo.toml
website/content/blog-pages/: generative_ai.md  push_and_pull.md  rust_ranges_and_suffering.md
website/content/pages/: about.md  home.md
website/content/static/: style.css
website/content/static/arewemicrowaveyet/: converter.js  index.html  styles.css
website/content/syntaxes/: RustEnhanced.sublime-syntax
website/content/templates/: error.html.tera  macros.html.tera  page.html.tera  post-list.html.tera  post.html.tera
website/src/: error.rs  main.rs  markdown.rs  page.rs  posts.rs  routes.rs  shutdown.rs  state.rs  templates.rs  tera_utils.rs
