[package]
name = "woeblog"
version = "0.1.0"
edition = "2018"

[dependencies]
chrono = { version="0.4.19", features=["serde"] }
chrono-humanize = "0.2"
comrak = "0.10.1"
rocket = "0.5.0-rc.1"
rocket_dyn_templates = { version="0.1.0-rc.1", features=["tera"] }
toml = "0.5"
lazy_static = "1.4.0"
indexmap = { version="1.6.2", features=["serde-1"] }
serde_json = { version="1.0.64", features=["preserve_order"] }
