[package]
name = "woeblog"
version = "0.1.0"
edition = "2018"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
chrono-humanize = "0.2"
comrak = "0.10.1"
hex = "0.4.3"
hmac = "0.11.0"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["tera"] }
rss = { version = "2.0.0", features = ["with-serde"]}
sha2 = "0.9.5"
syntect = { git = "https://github.com/trishume/syntect" }
toml = "0.5"
lazy_static = "1.4.0"
indexmap = { version = "1.6.2", features = ["serde-1"] }
serde_json = { version = "1.0.64", features = ["preserve_order"] }
